--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>WSS Modules</title>
-    <base href="https://elife-asu.github.io/elife-asu/wss-modules/modules/">
+    <base href="https://elife-asu.github.io/wss-modules/modules/">
 </head>
 <body>
     <header>
