Working aperture and radius sliders

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -37,21 +37,16 @@
         </div>
         <div id="ca">
             <div id="settings">
-<!--                 <div id="radius-settings">
-                    <label for="radius-slider">Radius:</label>
-                    <input type="range" min="1" max="10" id="radius-slider" name="radius-slider" />
-                    <output id="radius" name="radius" for="radius-slider"></output>
-                </div>
-                <div id="aperture-settings">
-                    <label for="aperture-slider">Aperture:</label>
-                    <input type="range" min="1" max="10" id="aperture-slider" name="aperture-slider" />
-                    <output id="aperture" name="aperture" for="aperture-slider"></output>
-                </div> -->
                 <div id="cell-count-settings">
                     <label for="cell-count-slider">Number of Cells:</label>
                     <input type="range" min="20" max="180" id="cell-count-slider" name="cell-count-slider" />
                     <output id="cell-count" name="cell-count" for="cell-count-slider"></output>
                 </div>
+                <div id="aperture-settings">
+                    <label for="aperture-slider">Aperture:</label>
+                    <input type="range" min="5" max="45" id="aperture-slider" name="aperture-slider" />
+                    <output id="aperture" name="aperture" for="aperture"></output>
+                </div>                
                 <div id="speed-settings">
                     <label for="speed-slider">Simulation Speed:</label>
                     <input type="range" min="100" max="1000" step="100" id="speed-slider" name="speed-slider" />
