Change name of slider to Radius

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -37,10 +37,10 @@
         </div>
         <div id="ca">
             <div id="settings">
-                <div id="cell-count-settings">
-                    <label for="cell-count-slider">Number of Cells:</label>
-                    <input type="range" min="20" max="180" id="cell-count-slider" name="cell-count-slider" />
-                    <output id="cell-count" name="cell-count" for="cell-count-slider"></output>
+                <div id="radius-settings">
+                    <label for="radius-slider">Radius:</label>
+                    <input type="range" min="20" max="180" id="radius-slider" name="radius-slider" />
+                    <output id="radius" name="radius" for="radius-slider"></output>
                 </div>
                 <div id="aperture-settings">
                     <label for="aperture-slider">Aperture:</label>
