--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -52,6 +52,11 @@
                     <input type="range" min="100" max="1000" step="100" id="speed-slider" name="speed-slider" />
                     <output id="speed" name="speed" for="speed-slider"></output>
                 </div>
+                <div id="number-settings">
+                    <label for="number-slider">Colony Size:</label>
+                    <input type="range" min="20" max="180" id="number-slider" name="number-slider"/>
+                    <output id="number" name="number" for="number-slider"></output>
+                </div>
                 <div id="rule-settings">
                     <label for="rule">Rule:</label>
                     <select name="rule" id="rule"></select>
