--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -49,18 +49,23 @@
                 </div>                
                 <div id="speed-settings">
                     <label for="speed-slider">Simulation Speed:</label>
-                    <input type="range" min="100" max="1000" step="100" id="speed-slider" name="speed-slider" />
+                    <input type="range" min="100" max="1000" step="10" id="speed-slider" name="speed-slider" />
                     <output id="speed" name="speed" for="speed-slider"></output>
+                </div>
+                <div id="discovery-settings">
+                    <label for="discovery-slider">Discovery Rate:</label>
+                    <input type="range" min="10" max="90" step="5" id="discovery-slider" name="discovery-slider" />
+                    <output id="discovery" name="discovery" for="discovery-slider"></output>
                 </div>
                 <div id="number-settings">
                     <label for="number-slider">Colony Size:</label>
                     <input type="range" min="20" max="180" id="number-slider" name="number-slider"/>
                     <output id="number" name="number" for="number-slider"></output>
                 </div>
-                <div id="rule-settings">
+<!--                 <div id="rule-settings">
                     <label for="rule">Rule:</label>
                     <select name="rule" id="rule"></select>
-                </div>
+                </div> -->
             </div>
             <svg id="trajectory" width="400" height="400"></svg>
 <!--             <svg id="nest" width="400" height="400"></svg>
