create dynamic plot

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -57,15 +57,11 @@
                     <input type="range" min="10" max="90" step="5" id="discovery-slider" name="discovery-slider" />
                     <output id="discovery" name="discovery" for="discovery-slider"></output>
                 </div>
-                <div id="number-settings">
-                    <label for="number-slider">Colony Size:</label>
-                    <input type="range" min="20" max="180" id="number-slider" name="number-slider"/>
-                    <output id="number" name="number" for="number-slider"></output>
+                <div id="colony-settings">
+                    <label for="colony-slider">Colony Size:</label>
+                    <input type="range" min="20" max="180" id="colony-slider" name="colony-slider"/>
+                    <output id="colony" name="colony" for="colony-slider"></output>
                 </div>
-<!--                 <div id="rule-settings">
-                    <label for="rule">Rule:</label>
-                    <select name="rule" id="rule"></select>
-                </div> -->
             </div>
             <svg id="trajectory" width="400" height="400"></svg>
 <!--             <svg id="nest" width="400" height="400"></svg>
