--- a/modules/3-network-scaling/simulatortest.html
+++ b/modules/3-network-scaling/simulatortest.html
@@ -1,26 +1,27 @@
 <!doctype html>
 <html>
-<head>
-	<title>Network Builder Simulation</title>
-	<link rel="stylesheet" href="style.css" />
-	<script type="application/javascript" src="https://d3js.org/d3.v5.min.js"></script>
-	<script type="application/javascript" src="simulatortest.js" defer></script>
-</head>
+    <head>
+        <title>Network Builder Simulation</title>
+        <link rel="stylesheet" href="style.css" />
+        <script type="application/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+        <script type="application/javascript" src="jsnetworkx.js"></script>
+        <script type="application/javascript" src="simulatortest.js" defer></script>
+    </head>
 
-<body>
-	<div id="container">
-		<div id="instructions">
-			<h2>Instructions</h2>
-			<p>To add a node to the network, click the "Add Node" button, and then click where you'd like to place the node.</p>
+    <body>
+        <div id="container">
+            <div id="instructions">
+                <h2>Instructions</h2>
+                <p>To add a node to the network, click the "Add Node" button, and then click where you'd like to place the node.</p>
 
-			<p>To connect two nodes, click the "Add Edge" button, and then click on each node you'd like to connect to each other.</p>
+                <p>To connect two nodes, click the "Add Edge" button, and then click on each node you'd like to connect to each other.</p>
 
-			<p>To remove a node, click "Remove Node" and then click on the node you wish to remove.</p>
+                <p>To remove a node, click "Remove Node" and then click on the node you wish to remove.</p>
 
-			<p>To remove an edge, click "Remove Edge", and then click the two nodes connected by the edge you wish to remove.</p>
-		
-	</div>
-	<svg id="simulator" width="400" height="600"></svg>
+                <p>To remove an edge, click "Remove Edge", and then click the two nodes connected by the edge you wish to remove.</p>
 
-
-</body>
+            </div>
+            <div id="simulator" style="width: 400px; height: 600px;"></div>
+        </div>
+    </body>
+</html>
