Set #simulator width/height in style.css

--- a/modules/3-network-scaling/index.html
+++ b/modules/3-network-scaling/index.html
@@ -21,7 +21,7 @@
                 <p>To remove an edge, click "Remove Edge", and then click the two nodes connected by the edge you wish to remove.</p>
 
             </div>
-            <div id="simulator" style="width: 400px; height: 600px;"></div>
+            <div id="simulator"></div>
         </div>
     </body>
 </html>
