Working on building controls for simulator; something weird is going on with the spacing

--- a/modules/3-network-scaling/index.html
+++ b/modules/3-network-scaling/index.html
@@ -22,6 +22,12 @@
 
             </div>
             <div id="simulator"></div>
+            	<div id="controls">
+            	<input type = "button" id="addnode" value="Add a Node" />
+           		<input type = "button" id="removenode" value="Remove a Node"/>
+            	<input type = "button" id="addedge" value="Add an Edge"/>
+           		<input type = "button" id=removeedge" value="Remove an Edge"/>
+            	</div>
         </div>
     </body>
 </html>
