--- a/modules/1-cellular-automata/Simple1D_CA/index.html
+++ b/modules/1-cellular-automata/Simple1D_CA/index.html
@@ -27,6 +27,7 @@
         <!-- Following is test controler -->
         <h3>Test</h3>
         <input type="button" value="Random Cells" onclick="setRandomCells()"/>
+        <!-- Bug: It will create cells again -->
     </div>
 </body>
 
