--- a/modules/1-cellular-automata/Simple1D_CA/index.html
+++ b/modules/1-cellular-automata/Simple1D_CA/index.html
@@ -9,20 +9,20 @@
     <h1>1D Cellular Automata</h1>
     <p>A Simple Version</p>
     <div id="setting">
-        CA Rule: <input type="number" min="0" max="255" name="CARule" value="110"/>
+        CA Rule: <input type="number" min="0" max="255" name="CARule" value="110" onchange="setRule()" id="CARule"/>
     </div>
     <br>
     <div id="display">
         <svg id="CA" width="500" height="500"></svg>
     </div>
     <div id="control">
-        <input type="button" value="Run"/>
-        <input type="button" value="Step"/>
-        <input type="button" value="Run to End"/>
-        <input type="button" value="Clear" onclick="clearCells()"/>
+            <input type="button" value="Run" id="run" onclick="RunToEnd(500)"/>
+            <input type="button" value="Step" onclick="OneStep()" id="step"/>
+            <input type="button" value="Run to End" id="run_end" onclick="RunToEnd()"/>
+            <input type="button" value="Clear" onclick="clearCells()" id="clear"/>
         | Initial: 
-        <input type="button" value="Single Cell"/>
-        <input type="button" value="Random Cell"/>
+        <input type="button" value="Single Cell" onclick="setSingleInitCells()"/>
+        <input type="button" value="Random Cell" onclick="setRandomInitCells()"/>
         <br>
         <!-- Following is test controler -->
         <h3>Test</h3>
