--- a/modules/1-cellular-automata/Simple1D_CA/index.html
+++ b/modules/1-cellular-automata/Simple1D_CA/index.html
@@ -10,6 +10,9 @@
     <p>A Simple Version</p>
     <div id="setting">
         CA Rule: <input type="number" min="0" max="255" name="CARule" value="110" onchange="setRule()" id="CARule"/>
+        Size: <input type="number" min="0" max="255" name="CASize" value="20" onchange="setSize()" id="CASize"/>
+        <br>
+        <svg id="ECARule" width="500" height="60"></svg>
     </div>
     <br>
     <div id="display">
