--- a/modules/1-cellular-automata/2DCA/index.html
+++ b/modules/1-cellular-automata/2DCA/index.html
@@ -14,6 +14,7 @@
     </div>
 </body>
 
+<script type="application/javascript" src="src/functions.js"></script>
 <script type="application/javascript" src="src/main.js"></script>
 
 </html>
