--- a/modules/1-cellular-automata/2DCA/index.html
+++ b/modules/1-cellular-automata/2DCA/index.html
@@ -10,7 +10,7 @@
         <svg id="CA" width="500" height="500"></svg>
     </div>
     <div id="control">
-        <input type="button" id="initRand" value="Set random cells" onclick="setRandomCells()">
+        <input type="button" id="initRand" value="Set random cells" onclick="caMap.setRandomCells()">
     </div>
 </body>
 
