--- a/modules/1-cellular-automata/2DCA/index.html
+++ b/modules/1-cellular-automata/2DCA/index.html
@@ -11,6 +11,7 @@
     </div>
     <div id="control">
         <input type="button" id="initRand" value="Set random cells" onclick="caMap.setRandomCells()">
+        <input type="button" id="RunCA" value="Run" onclick="">
     </div>
 </body>
 
