🐜 Align progress bars with arena svg edges

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -76,9 +76,9 @@
     </div> -->
     <div id="arena">
         <div id="prog-svg-prog">
-            <progress id="left-prog"></progress>
+            <progress class="progress-bar" id="left-prog"></progress>
             <svg id="trajectory" width="800" height="400"></svg>
-            <progress id="right-prog"></progress>
+            <progress class="progress-bar" id="right-prog"></progress>
         </div>
         <div id="controls">
             <input type="button" id="step" value="Step" />
