🐜 Clean up spacing, e.g. widths and margins

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -14,16 +14,14 @@
     <header>
         <h1>Nest Site Selection</h1>
     </header>
-    <div id="container-1">
-        <div id="instructions">
-            <h2>Instructions:</h2>         
-            <p>
-                See how the geometry of the environment can affect the ability for a colony to reach quorum at a given nest. Parameters such as radius, aperture size, and entry rate can be changed via the toggle bars above each nest.
-            </p>
-        </div>
+    <div id="instructions">
+        <h2>Instructions:</h2>         
+        <p>
+            See how the geometry of the environment can affect the ability for a colony to reach quorum at a given nest. Parameters such as radius, aperture size, and entry rate can be changed via the toggle bars above each nest.
+        </p>
     </div>
     <div id="nest">
-        <div id="nest-A-settings">
+        <div class="nest-settings" id="nest-A-settings">
             <h3>Nest A Settings</h3>
             <div id="radius-A-settings">
                 <label for="radius-A-slider">Radius A:</label>
@@ -41,7 +39,7 @@
                 <output id="discovery-A" name="discovery-A" for="discovery-A-slider"></output>
             </div>
         </div>     
-        <div id="nest-B-settings">
+        <div class="nest-settings" id="nest-B-settings">
             <h3>Nest B Settings</h3>
             <div id="radius-B-settings">
                 <label for="radius-B-slider">Radius B:</label>
