🐜 Space out nest setting controls

--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -23,17 +23,17 @@
     <div id="nest">
         <div class="nest-settings" id="nest-A-settings">
             <h3>Nest A Settings</h3>
-            <div id="radius-A-settings">
+            <div class="nest-controls" id="radius-A-settings">
                 <label for="radius-A-slider">Radius A:</label>
                 <input type="range" min="40" max="180" id="radius-A-slider" name="radius-A-slider" />
                 <output id="radius-A" name="radius-A" for="radius-A-slider"></output>
             </div>
-            <div id="aperture-A-settings">
+            <div class="nest-controls" id="aperture-A-settings">
                 <label for="aperture-A-slider">Aperture A:</label>
                 <input type="range" min="25" max="60" id="aperture-A-slider" name="aperture-A-slider" />
                 <output id="aperture-A" name="aperture-A" for="aperture-A"></output>
             </div>                
-            <div id="discovery-A-settings">
+            <div class="nest-controls" id="discovery-A-settings">
                 <label for="discovery-A-slider">Discovery Rate A:</label>
                 <input type="range" min="10" max="90" step="5" id="discovery-A-slider" name="discovery-A-slider" />
                 <output id="discovery-A" name="discovery-A" for="discovery-A-slider"></output>
@@ -41,17 +41,17 @@
         </div>     
         <div class="nest-settings" id="nest-B-settings">
             <h3>Nest B Settings</h3>
-            <div id="radius-B-settings">
+            <div class="nest-controls" id="radius-B-settings">
                 <label for="radius-B-slider">Radius B:</label>
                 <input type="range" min="40" max="180" id="radius-B-slider" name="radius-B-slider" />
                 <output id="radius-B" name="radius-B" for="radius-B-slider"></output>
             </div>
-            <div id="aperture-B-settings">
+            <div class="nest-controls" id="aperture-B-settings">
                 <label for="aperture-B-slider">Aperture B:</label>
                 <input type="range" min="25" max="60" id="aperture-B-slider" name="aperture-B-slider" />
                 <output id="aperture-B" name="aperture-B" for="aperture-B"></output>
             </div>                
-            <div id="discovery-B-settings">
+            <div class="nest-controls" id="discovery-B-settings">
                 <label for="discovery-B-slider">Discovery Rate B:</label>
                 <input type="range" min="10" max="90" step="5" id="discovery-B-slider" name="discovery-B-slider" />
                 <output id="discovery-B" name="discovery-B" for="discovery-B-slider"></output>
