--- a/modules/4-collective-behavior/index.html
+++ b/modules/4-collective-behavior/index.html
@@ -12,12 +12,22 @@
 </head>
 <body>
     <header>
-        <h1>Collective Behavior</h1>
+        <h1>Collective Decision Making in Temnothorax Ant Colonies</h1>
     </header>
     <div id="instructions">
         <h2> Instructions </h2>
         <p>
-            In this simulation, you will be playing with a stripped down version of nest site selection in Temnothorax ant colonies. Your goal is to reverse engineer the rule by which the colony comes to a collective decision. As you will see, there is a progress bar to the left and right of the arena that keeps track of how close a colony is to choosing a given nest. When the progress bar fills up, a consensus decision has been reached. To aid in your understanding, a list of helpful questions is provided.
+            In this simulator, you will be playing with a stripped down version of nest site selection in Temnothorax ant colonies.
+
+            As you learned in lecture, the first nest site to reach a critical density (known as quorum) wins the competition. But how does an individual ant know if quorum has been met? Does it count up all the ants in the nest and divide by the nest area?
+
+        <p>
+            <b>It is your job here to reverse engineer the rule that individual ants use in this simulation to sense quorum.</b>
+        </p>	
+            As you will see, there is a progress bar to the left and right of the arena that keeps track of how close a colony is to choosing a given nest. When the progress bar fills up, a consensus decision has been reached. 
+
+            To aid in your understanding, a list of helpful questions is below.
+
         </p>
     <div id="questions">
         <h2> Questions </h2>   
