Added instructions to the HTML page

--- a/modules/3-network-scaling/index.html
+++ b/modules/3-network-scaling/index.html
@@ -10,11 +10,13 @@
 
     <body>
         <header>
-            <h1>Network Scaling?</h1>
+            <h1>Network Builder Simulator</h1>
         </header>
         <div class="block block--centered">
             <h2 class="block__header">Instructions</h2>
-            <p class="block_par">This is what you should do...</p>
+            <p class="block_par">You can construct two different types of graphs: Erd&ouml;s-R&eacute;nyi and Barab&aacute;si-Albert.  
+            Control the number of nodes, and the initial attachment parameters using the sliders. 
+        	The density, mean degree, average shortest path, and degree distribution of the resulting graph will appear in the Properties section.</p>
         </div>
         <div class="block block--bottom">
             <div class="pane">
