--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>WSS Modules</title>
-    <base href="https://elife-asu.github.io/wss-modules/modules/">
+    <base href="https://elife-asu.github.io/wss-modules/">
 </head>
 <body>
     <header>
         <h1>WSS Modules</h1>
     </header>
     <ul>
-        <li><a href="0-ecas">Elementary Cellular Automata</a></li>
-        <li><a href="1-cellular-automata">2D Cellular Automata</a></li>
-        <li><a href="2-grns">Gene Regulatory Networks</a></li>
-        <li><a href="3-network-scaling">Network Scaling Laws</a></li>
-        <li><a href="4-collective-behavior">Collective Behavior</a></li>
+        <li><a href="modules/1-1d-cellular-automata">1D Cellular Automata</a></li>
+        <li><a href="modules/2-2d-cellular-automata">2D Cellular Automata</a></li>
+        <li><a href="modules/3-network-scaling">Network Scaling Laws</a></li>
+        <li><a href="modules/4-collective-behavior">Collective Behavior</a></li>
     </ul>
     <footer>
         <p>Copyright © 2018, <a href="https://emergence.asu.edu">Emergence@ASU</a></p>
